⚙️ Add (ML): Implement Random Forest Classifier model

--- a/notebooks/room12_eda_20240220_ml.ipynb
+++ b/notebooks/room12_eda_20240220_ml.ipynb
@@ -26,13 +26,14 @@
       "id": "c54b5dc4d1580434",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.751974Z",
-          "start_time": "2024-02-27T01:17:52.465972Z"
+          "end_time": "2024-03-01T22:43:47.583355Z",
+          "start_time": "2024-03-01T22:43:47.282355Z"
         },
         "collapsed": false
       },
       "outputs": [],
       "source": [
+        "import os\n",
         "from typing import Any\n",
         "\n",
         "import numpy as np\n",
@@ -40,16 +41,29 @@
         "import seaborn as sns\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from pygam import LinearGAM, s\n",
-        "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix, mean_squared_error\n",
+        "from sklearn.ensemble import (\n",
+        "    AdaBoostClassifier,\n",
+        "    GradientBoostingClassifier,\n",
+        "    RandomForestClassifier,\n",
+        ")\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score,\n",
+        "    confusion_matrix,\n",
+        "    f1_score,\n",
+        "    mean_squared_error,\n",
+        "    precision_score,\n",
+        "    recall_score,\n",
+        "    roc_auc_score,\n",
+        ")\n",
         "from sklearn.model_selection import GridSearchCV, train_test_split\n",
         "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import StandardScaler, label_binarize\n",
         "from sklearn.svm import SVC\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
         "pd.set_option(\"display.max_columns\", 30)\n",
-        "pd.set_option(\"display.width\", 1440)"
+        "pd.set_option(\"display.width\", 1440)\n",
+        "os.environ[\"LOKY_MAX_CPU_COUNT\"] = \"8\""
       ]
     },
     {
@@ -68,8 +82,8 @@
       "id": "bb2039ccc31f7fa3",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.783474Z",
-          "start_time": "2024-02-27T01:17:52.752973Z"
+          "end_time": "2024-03-01T22:43:47.623357Z",
+          "start_time": "2024-03-01T22:43:47.584855Z"
         },
         "collapsed": false
       },
@@ -95,8 +109,8 @@
       "id": "a70e32ac83efb1af",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.816972Z",
-          "start_time": "2024-02-27T01:17:52.784973Z"
+          "end_time": "2024-03-01T22:43:47.667855Z",
+          "start_time": "2024-03-01T22:43:47.624855Z"
         },
         "collapsed": false
       },
@@ -132,15 +146,15 @@
       "id": "d4d01fdf4ed4862",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.821973Z",
-          "start_time": "2024-02-27T01:17:52.817976Z"
+          "end_time": "2024-03-01T22:43:47.674355Z",
+          "start_time": "2024-03-01T22:43:47.668856Z"
         },
         "collapsed": false
       },
       "outputs": [],
       "source": [
-        "y: np.ndarray = df_dummies['Churn'].values\n",
-        "x: pd.DataFrame = df_dummies.drop(columns=['Churn'])\n",
+        "y: np.ndarray = df_dummies[\"Churn\"].values\n",
+        "x: pd.DataFrame = df_dummies.drop(columns=[\"Churn\"])\n",
         "\n",
         "features: np.ndarray = x.columns.values"
       ]
@@ -161,8 +175,8 @@
       "id": "61341cbe948d555a",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.830974Z",
-          "start_time": "2024-02-27T01:17:52.822472Z"
+          "end_time": "2024-03-01T22:43:47.685856Z",
+          "start_time": "2024-03-01T22:43:47.675357Z"
         },
         "collapsed": false
       },
@@ -188,8 +202,8 @@
       "id": "6dc239a44c25d2cd",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.836974Z",
-          "start_time": "2024-02-27T01:17:52.831972Z"
+          "end_time": "2024-03-01T22:43:47.693357Z",
+          "start_time": "2024-03-01T22:43:47.686856Z"
         },
         "collapsed": false
       },
@@ -216,36 +230,14 @@
       "id": "4c6969c606d971d",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.944474Z",
-          "start_time": "2024-02-27T01:17:52.837973Z"
+          "end_time": "2024-03-01T22:43:47.786354Z",
+          "start_time": "2024-03-01T22:43:47.694857Z"
         },
         "collapsed": false
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\juanp\\PycharmProjects\\PrDS_2024__TelcoCustomerChurn\\.venv\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
-            "[WinError 2] The system cannot find the file specified\n",
-            "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
-            "  warnings.warn(\n",
-            "  File \"C:\\Users\\juanp\\PycharmProjects\\PrDS_2024__TelcoCustomerChurn\\.venv\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
-            "    cpu_info = subprocess.run(\n",
-            "               ^^^^^^^^^^^^^^^\n",
-            "  File \"C:\\Program Files\\Python311\\Lib\\subprocess.py\", line 548, in run\n",
-            "    with Popen(*popenargs, **kwargs) as process:\n",
-            "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"C:\\Program Files\\Python311\\Lib\\subprocess.py\", line 1026, in __init__\n",
-            "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
-            "  File \"C:\\Program Files\\Python311\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
-            "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
-            "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "smote: SMOTE = SMOTE(sampling_strategy='auto', random_state=42)\n",
+        "smote: SMOTE = SMOTE(sampling_strategy=\"auto\", random_state=42)\n",
         "x_train, y_train = smote.fit_resample(x_unbalanced, y_unbalanced)"
       ]
     },
@@ -273,8 +265,8 @@
       "id": "5163bbbc",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.949972Z",
-          "start_time": "2024-02-27T01:17:52.945473Z"
+          "end_time": "2024-03-01T22:43:47.792354Z",
+          "start_time": "2024-03-01T22:43:47.787354Z"
         }
       },
       "outputs": [],
@@ -300,7 +292,7 @@
         "    :rtype: tuple[Pipeline, GridSearchCV]\n",
         "    \"\"\"\n",
         "    grid_search: GridSearchCV = GridSearchCV(\n",
-        "        pipeline, param_grid, scoring='accuracy', cv=5\n",
+        "        pipeline, param_grid, scoring=\"accuracy\", cv=5\n",
         "    )\n",
         "    grid_search.fit(independent_training_data, dependant_training_data)\n",
         "    return grid_search.best_estimator_, grid_search"
@@ -320,8 +312,8 @@
       "id": "bcf8b252",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:17:52.954472Z",
-          "start_time": "2024-02-27T01:17:52.950972Z"
+          "end_time": "2024-03-01T22:43:47.799854Z",
+          "start_time": "2024-03-01T22:43:47.793355Z"
         }
       },
       "outputs": [],
@@ -343,8 +335,35 @@
         "    :rtype: NoneType\n",
         "    \"\"\"\n",
         "    y_pred: np.ndarray = model.predict(independent_testing_data)\n",
+        "    if hasattr(model, \"predict_proba\"):\n",
+        "        y_proba: np.ndarray = model.predict_proba(independent_testing_data)\n",
+        "        roc_auc: float\n",
+        "        if y_proba.shape[1] > 2:\n",
+        "            y_test_binarized = label_binarize(\n",
+        "                dependent_testing_data,\n",
+        "                classes=np.unique(dependent_testing_data),\n",
+        "            )\n",
+        "            roc_auc = roc_auc_score(\n",
+        "                y_test_binarized, y_proba, multi_class=\"ovr\"\n",
+        "            )\n",
+        "        else:\n",
+        "            roc_auc = roc_auc_score(dependent_testing_data, y_proba[:, 1])\n",
+        "        print(f\"ROC-AUC: {roc_auc:.4f}\")\n",
+        "\n",
         "    accuracy: float = accuracy_score(dependent_testing_data, y_pred)\n",
-        "    print(f\"Test set accuracy: {accuracy}\")\n",
+        "    precision: float = precision_score(\n",
+        "        dependent_testing_data, y_pred, average=\"weighted\"\n",
+        "    )\n",
+        "    recall: float = recall_score(\n",
+        "        dependent_testing_data, y_pred, average=\"weighted\"\n",
+        "    )\n",
+        "    f1: float = f1_score(dependent_testing_data, y_pred, average=\"weighted\")\n",
+        "\n",
+        "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+        "    print(f\"Precision: {precision:.4f}\")\n",
+        "    print(f\"Recall: {recall:.4f}\")\n",
+        "    print(f\"F1-score: {f1:.4f}\")\n",
+        "    print(\"Confusion Matrix:\")\n",
         "    print(confusion_matrix(dependent_testing_data, y_pred))"
       ]
     },
@@ -374,8 +393,8 @@
       "id": "9a421fac8e90de32",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:29:00.846974Z",
-          "start_time": "2024-02-27T01:17:52.955472Z"
+          "end_time": "2024-03-01T22:54:20.705855Z",
+          "start_time": "2024-03-01T22:43:47.800853Z"
         },
         "collapsed": false
       },
@@ -384,7 +403,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test set accuracy: 0.7650816181689141\n",
+            "Accuracy: 0.7651\n",
+            "Precision: 0.7842\n",
+            "Recall: 0.7651\n",
+            "F1-score: 0.7719\n",
+            "Confusion Matrix:\n",
             "[[829 207]\n",
             " [124 249]]\n"
           ]
@@ -392,12 +415,12 @@
       ],
       "source": [
         "pipeline_svc: Pipeline = Pipeline(\n",
-        "    [('scaler', StandardScaler()), ('svc', SVC(random_state=42))]\n",
+        "    [(\"scaler\", StandardScaler()), (\"svc\", SVC(random_state=42))]\n",
         ")\n",
         "param_grid_svc: dict[str, list[Any]] = {\n",
-        "    'svc__C': [0.1, 1, 10, 100],\n",
-        "    'svc__kernel': ['linear', 'rbf'],\n",
-        "    'svc__gamma': ['scale', 'auto'],\n",
+        "    \"svc__C\": [0.1, 1, 10, 100],\n",
+        "    \"svc__kernel\": [\"linear\", \"rbf\"],\n",
+        "    \"svc__gamma\": [\"scale\", \"auto\"],\n",
         "}\n",
         "best_model_svc, grid_search_svc = train_model(\n",
         "    x_train, y_train, pipeline_svc, param_grid_svc\n",
@@ -411,8 +434,8 @@
       "id": "d898bce314dada25",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:29:01.080973Z",
-          "start_time": "2024-02-27T01:29:00.847973Z"
+          "end_time": "2024-03-01T22:54:20.918855Z",
+          "start_time": "2024-03-01T22:54:20.706355Z"
         },
         "collapsed": false
       },
@@ -452,8 +475,8 @@
       "id": "41517e5c802d7f1b",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T01:46:24.146975Z",
-          "start_time": "2024-02-27T01:29:01.082974Z"
+          "end_time": "2024-03-01T23:10:36.812856Z",
+          "start_time": "2024-03-01T22:54:20.919855Z"
         },
         "collapsed": false
       },
@@ -462,7 +485,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test set accuracy: 0.7963094393186657\n",
+            "ROC-AUC: 0.8435\n",
+            "Accuracy: 0.7963\n",
+            "Precision: 0.7951\n",
+            "Recall: 0.7963\n",
+            "F1-score: 0.7957\n",
+            "Confusion Matrix:\n",
             "[[896 140]\n",
             " [147 226]]\n"
           ]
@@ -470,22 +498,22 @@
       ],
       "source": [
         "pipeline_gbm: Pipeline = Pipeline(\n",
-        "    [('model', GradientBoostingClassifier(random_state=42))]\n",
+        "    [(\"model\", GradientBoostingClassifier(random_state=42))]\n",
         ")\n",
         "param_grid_gbm: dict[str, list[Any]] = {\n",
-        "    'model__n_estimators': [100, 200, 300],\n",
-        "    'model__learning_rate': [0.01, 0.1, 0.2],\n",
-        "    'model__max_depth': [3, 4, 5],\n",
-        "    'model__subsample': [\n",
+        "    \"model__n_estimators\": [100, 200, 300],\n",
+        "    \"model__learning_rate\": [0.01, 0.1, 0.2],\n",
+        "    \"model__max_depth\": [3, 4, 5],\n",
+        "    \"model__subsample\": [\n",
         "        0.8,\n",
         "        0.9,\n",
         "        1.0,\n",
         "    ],\n",
         "}\n",
-        "best_model_svc, grid_search_gbm = train_model(\n",
+        "best_model_gbm, grid_search_gbm = train_model(\n",
         "    x_train, y_train, pipeline_gbm, param_grid_gbm\n",
         ")\n",
-        "evaluate_model(best_model_svc, x_test, y_test)"
+        "evaluate_model(best_model_gbm, x_test, y_test)"
       ]
     },
     {
@@ -500,12 +528,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "id": "79f2c857",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T02:44:10.441567Z",
-          "start_time": "2024-02-27T02:42:46.534568Z"
+          "end_time": "2024-03-01T23:11:54.319356Z",
+          "start_time": "2024-03-01T23:10:36.813356Z"
         }
       },
       "outputs": [
@@ -513,7 +541,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test set accuracy: 0.7892122072391767\n",
+            "ROC-AUC: 0.8522\n",
+            "Accuracy: 0.7892\n",
+            "Precision: 0.8113\n",
+            "Recall: 0.7892\n",
+            "F1-score: 0.7963\n",
+            "Confusion Matrix:\n",
             "[[838 198]\n",
             " [ 99 274]]\n"
           ]
@@ -523,7 +556,7 @@
         "pipeline_adaboost: Pipeline = Pipeline(\n",
         "    [\n",
         "        (\n",
-        "            'model',\n",
+        "            \"model\",\n",
         "            AdaBoostClassifier(\n",
         "                DecisionTreeClassifier(max_depth=1, random_state=42),\n",
         "                algorithm=\"SAMME\",\n",
@@ -533,14 +566,14 @@
         "    ]\n",
         ")\n",
         "param_grid_adaboost: dict[str, list[Any]] = {\n",
-        "    'model__n_estimators': [50, 100, 200],\n",
-        "    'model__learning_rate': [0.01, 0.1, 1],\n",
-        "    'model__estimator__max_depth': [1, 2],\n",
+        "    \"model__n_estimators\": [50, 100, 200],\n",
+        "    \"model__learning_rate\": [0.01, 0.1, 1],\n",
+        "    \"model__estimator__max_depth\": [1, 2],\n",
         "}\n",
-        "best_model_svc, grid_search_adaboost = train_model(\n",
+        "best_model_adaboost, grid_search_adaboost = train_model(\n",
         "    x_train, y_train, pipeline_adaboost, param_grid_adaboost\n",
         ")\n",
-        "evaluate_model(best_model_svc, x_test, y_test)"
+        "evaluate_model(best_model_adaboost, x_test, y_test)"
       ]
     },
     {
@@ -555,12 +588,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "id": "2264c45bc9095f6b",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T02:44:38.455386Z",
-          "start_time": "2024-02-27T02:44:38.451384Z"
+          "end_time": "2024-03-01T23:11:54.323356Z",
+          "start_time": "2024-03-01T23:11:54.320357Z"
         },
         "collapsed": false
       },
@@ -574,12 +607,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "id": "70bd9fbc53b5b15e",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T02:44:40.247309Z",
-          "start_time": "2024-02-27T02:44:39.684808Z"
+          "end_time": "2024-03-01T23:11:54.670961Z",
+          "start_time": "2024-03-01T23:11:54.324356Z"
         },
         "collapsed": false
       },
@@ -597,12 +630,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "id": "96a6cb637e984df8",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-27T02:44:41.250528Z",
-          "start_time": "2024-02-27T02:44:41.246029Z"
+          "end_time": "2024-03-01T23:11:54.675463Z",
+          "start_time": "2024-03-01T23:11:54.671463Z"
         },
         "collapsed": false
       },
@@ -645,7 +678,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\juanp\\AppData\\Local\\Temp\\ipykernel_2080\\2151649304.py:4: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
+            "C:\\Users\\juanp\\AppData\\Local\\Temp\\ipykernel_15068\\2151649304.py:4: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
             " \n",
             "Please do not make inferences based on these values! \n",
             "\n",
@@ -664,9 +697,73 @@
       ]
     },
     {
-      "cell_type": "code",
-      "id": "85a595aedbb7dab5",
+      "cell_type": "markdown",
+      "id": "baf1c79c4a6fb5e7",
       "metadata": {
+        "collapsed": false
+      },
+      "source": [
+        "### Random Forest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "id": "ec7e190a299afa2",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-03-01T23:22:54.422194Z",
+          "start_time": "2024-03-01T23:11:54.676464Z"
+        },
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ROC-AUC: 0.8377\n",
+            "Accuracy: 0.7921\n",
+            "Precision: 0.7937\n",
+            "Recall: 0.7921\n",
+            "F1-score: 0.7928\n",
+            "Confusion Matrix:\n",
+            "[[885 151]\n",
+            " [142 231]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "pipeline_rf: Pipeline = Pipeline(\n",
+        "    [\n",
+        "        (\"scaler\", StandardScaler()),\n",
+        "        (\"rf\", RandomForestClassifier(n_jobs=-1, random_state=42)),\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "param_grid_rf: dict[str, list[Any]] = {\n",
+        "    \"rf__n_estimators\": [100, 200, 300],\n",
+        "    \"rf__max_depth\": [None, 10, 20, 30],\n",
+        "    \"rf__min_samples_split\": [2, 5, 10],\n",
+        "    \"rf__min_samples_leaf\": [1, 2, 4],\n",
+        "    \"rf__max_features\": [\"sqrt\", \"log2\", None],\n",
+        "}\n",
+        "\n",
+        "best_model_rf, grid_search_rf = train_model(\n",
+        "    x_train, y_train, pipeline_rf, param_grid_rf\n",
+        ")\n",
+        "evaluate_model(best_model_rf, x_test, y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "id": "e59a9297168fb9bd",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-03-01T23:22:54.427692Z",
+          "start_time": "2024-03-01T23:22:54.423194Z"
+        },
         "collapsed": false
       },
       "outputs": [],
